--- a/src/routes/LandPage/index.css
+++ b/src/routes/LandPage/index.css
@@ -1,7 +1,26 @@
 .landing-image {
-  height: 292px;
-  width: 165px;
-  border-radius: 13px;
-  filter: drop-shadow(0px 0px 17.6435px rgba(0, 0, 0, 0.05));
-  margin: 36px, auto;
+  height: 776px;
+  width: 440px;
+  border-radius: 35px;
+  filter: drop-shadow(0px 0px 33.1283px rgba(0, 0, 0, 0.05));
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .landing-image {
+    height: 548px;
+    width: 311px;
+    border-radius: 25px;
+    filter: drop-shadow(0px 0px 33.1283px rgba(0, 0, 0, 0.05));
+    margin: 55px, auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .landing-image {
+    height: 292px;
+    width: 165px;
+    border-radius: 13px;
+    filter: drop-shadow(0px 0px 17.6435px rgba(0, 0, 0, 0.05));
+    margin: 36px, auto;
+  }
 }
